--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width"/>
     <link rel="stylesheet" href="./calcStyle.css">
-    <script src="compiledCalc.js" defer></script>
+    <script src="bundle.js" defer></script>
     <title>calculatorApp</title>
 </head>
 <body>
